# PBR-Engine

./: .gitignore  Cargo.toml  README.md
MTI870/: Cargo.toml  README.md
MTI870/examples/: devoir0.rs  devoir1.rs  devoir2.rs  img_compare.rs  render.rs  test.rs
MTI870/images/dev1/: task8_caustics.md
MTI870/images/dev2/: 05_phong1.exr  all-mats-naive.exr  all-mats-path.exr  all-mats.exr
MTI870/images/dev3/: rapport3.md
MTI870/instructions/: devoir_0_rust.html  devoir_0_rust_en.html  devoir_1_en_rust.html  devoir_1_rust.html  devoir_2_rust.html  devoir_3_en_rust.html  devoir_3_rust.html  devoir_4_en_rust.html  devoir_4_rust.html
MTI870/scenes/: direct-bsdf.json  direct-mis.json  hybrid-direct.json  linear.json  median_longest.json  normal.json  path-mis.json  sdf-direct.json  sdf-path-mis.json
MTI870/scenes/assets/: jedi_starfighter.mtl
MTI870/scenes/comp/: cave_setup.json  cave_voronoise.json  operator_difference_roundbox.json  operator_union_roundbox.json  sdf_raymarch_test.json
MTI870/scenes/devoir1/: 01_plane.json  06_caustic.json
MTI870/scenes/devoir2/: 04_all-materials-direct.exr  04_all-materials-path.exr  Oren_Nayar.json  blinn.json  subsurface.json  translucent.json  transparent.json
MTI870/scenes/devoir3/: 02_cornelbox.json  odyssey_triangle_mats.json  ref-odyssey_mats.exr  ref-sphere_light_large.exr  ref-sphere_light_medium.exr  ref-sphere_light_small.exr  sphere_light_large.json  sphere_light_medium.json  sphere_light_small.json  veach_mis.json
MTI870/scenes/devoir4/: 01_plane-normal.json  02_classic.json  02_cornelbox.json  02_spaceship.json  02_teapots-normals.json  02_teapots.json  02_triangles.json  03_living-room-uv.json  03_test-checkerboards_3d.json  03_uv.json  04_living-room.json  (+4 more)
MTI870/src/: aabb.rs  array2d.rs  camera.rs  fileresolver.rs  image.rs  json.rs  lib.rs  ray.rs  scene.rs  texture.rs  transform.rs  utils.rs  vec.rs
src/: aabb.rs  (+14 more)
(+212 files in other folders)
