[package]
name = "render"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
image = "0.25"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11"
tobj = "4"
log = "*"
tinyjson = "2.5"
quick-error = "2"
indicatif = { version = "0.17" } 
lazy_static = "1.4"
itertools = "0.11"
serde = { version = "1", features = ["derive"] }
oidn = { version = "2.3", optional = true }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
num_cpus = "*"
pretty_env_logger = "0.5"
env_logger = "0.10"
scan_fmt = "0.2"

[lints.clippy]
all = {level = "deny", priority = -2}
pedantic = {level = "warn", priority = -1}
nursery = {level = "warn", priority = -1}
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_long_first_doc_paragraph = "allow"
cognitive_complexity = "allow"
too_many_lines = "allow"
literal_string_with_formatting_args = "allow"
implicit_hasher = "allow"

[features]
default = []
oidn = ["dep:oidn"]

[[bin]]
name = "denoise_batch"
path = "scripts/denoise_batch.rs"
